--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "test",
   "version": "0.1.0",
+  "homepage": "https://unasif.github.io/marketplace-front",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
