--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -26,6 +26,7 @@ jobs:
         run: npm run build
         env:
           CI: false
+          PUBLIC_URL: "."
 
       - name: Deploy to Target Directory
         run: |
