--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "test",
   "version": "0.1.0",
+  "homepage": "/marketdemo",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
